--- a/src/style/ambience/_colors.sass
+++ b/src/style/ambience/_colors.sass
@@ -3,4 +3,4 @@ $color-saphire: #07c
 $color-darksaphire: #347
 $color-topaz: #f75
 
-$color-selection: rgba($color-topaz, 0.6)
+$color-selection: mix(#fff, $color-topaz, 40%)
