--- a/src/style/elements/_button.sass
+++ b/src/style/elements/_button.sass
@@ -13,6 +13,7 @@
   line-height: $line-height-deci
   font-weight: 500
   letter-spacing: 0.05em
+  text-align: center
 
   &.-small
     padding-top: $space-xxs
