Simplify navigation menu

--- a/src/style/components/_navigation-menu.sass
+++ b/src/style/components/_navigation-menu.sass
@@ -1,6 +1,6 @@
 .navigation-menu
   +container
-  position: fixed
+  position: absolute
   top: 0
   right: 0
   left: 0
@@ -16,7 +16,6 @@
   > a
     +v-align
     display: block
-    margin-left: calc(#{$space-xxs} + 2vw)
     color: #fff
     font-size: $font-size-mili
     line-height: $font-size-base
@@ -34,33 +33,22 @@
       font-family: $font-family-headings
       transition transform 0.4s ease
       transform-origin: 0 50%
-
-    &.link
-      +smart-underline ($color-saphire)
-      cursor: pointer
-      color: rgba(#fff, 0.8)
-      letter-spacing: 0.05em
-      font-weight: 400
-      &:hover,
-      &:focus,
-      &:active
-        color: #fff
-
-    &.button
-      +medium-down
-        display: none
-
-  &.-whenscroll
-    height: $space-l
-    background-color: $color-saphire
-    box-shadow: 0 2px 16px rgba(#000, 0.2)
-      
-  &:not(.-whenscroll)
-    > .button
-      display: none
-    > a:first-child
       transform: scale(1.25) translateY(-50%)
       +medium-up
         transform: scale(1.5) translateY(-50%)
       +large-up
         transform: scale(2) translateY(-50%)
+
+    &.link
+      cursor: pointer
+      letter-spacing: 0.05em
+      font-weight: 400
+      padding: $space-xs
+      +medium-down
+        padding: $space-xxs
+      &:hover
+        background-color: rgba(#000, 0.1)
+      &:focus
+        background-color: rgba(#000, 0.15)
+      &:active
+        background-color: rgba(#000, 0.2)
