--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -16,14 +16,13 @@ html
     nav#nav.navigation-menu
       a href="#start" Remoto
       a.link 800-736-6860
-      a.button.-tiny Start Free
       a.link href="#pricing" Pricing
       a.link href="#product" Product
 
     section#start.section-hero
       h1 Keep your team close  and your clients closer
       h4 Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
-      a.button Start Free
+      a.button href="#" Start Free
 
     section#product.section-features
       .feature
@@ -43,7 +42,7 @@ html
           h2.name Free
           h3.price $0
           p.note Ta-dah! 🎉
-          a.button.-small Start Free
+          a.button.-small href="#" Start Free
           ul.features
             li Free Intra-company calls worldwide
             li 10k message storage
@@ -52,7 +51,7 @@ html
           h2.name Standard
           h3.price $20
           p.note per active user, per month
-          a.button.-small Buy Standard
+          a.button.-small href="#" Buy Standard
           ul.features
             li All features from the Free plan
             li 1 year message storage
@@ -63,7 +62,7 @@ html
           h2.name Enterprise
           h3.price $50
           p.note per active user, per month
-          a.button.-small Buy Enterprise
+          a.button.-small href="#" Buy Enterprise
           ul.features
             li All features from the Standard plan
             li Unlimited message storage
@@ -90,6 +89,6 @@ html
         p Yours,
         p.signature Fred Guth, Founder & CEO
         p P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">alpha.remoto.me/fred@remoto.</a>
-      .button Start Free
+      .button href="#" Start Free
 
     script src="js/scripts.js"
