Call to action page basic structure

--- a/src/style/components/_section-features.sass
+++ b/src/style/components/_section-features.sass
@@ -1,5 +1,5 @@
 .section-features
   background-color: #fff
   .feature
-    padding-top: $space-xl
-    padding-bottom: $space-xl
+    padding-top: $space-l
+    padding-bottom: $space-l
