--- a/src/style/elements/_button.sass
+++ b/src/style/elements/_button.sass
@@ -14,6 +14,8 @@
   font-weight: 500
   letter-spacing: 0.05em
   text-align: center
+  border: none
+  outline: none
 
   &.-small
     padding-top: $space-xxs
