--- a/style/style.css
+++ b/style/style.css
@@ -221,8 +221,8 @@ body > section {
 }
 
 .section-features .feature {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .section-pricing {
@@ -459,6 +459,36 @@ body > section {
   z-index: -1;
 }
 
+.cta-page {
+  position: fixed;
+  top: 10vw;
+  bottom: 10vw;
+  right: 10vw;
+  left: 10vw;
+  padding: 10vw;
+  background-color: #fff;
+  z-index: 4;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.4);
+  transition: all 0.3s ease;
+}
+
+.cta-page > form > * {
+  display: block;
+}
+
+.-open-cta {
+  overflow: hidden;
+}
+
+.-open-cta .cta-page {
+  opacity: 1;
+  pointer-events: auto;
+  transform: scale(1);
+}
+
 .button {
   display: inline-block;
   color: #fff;
@@ -475,6 +505,8 @@ body > section {
   font-weight: 500;
   letter-spacing: 0.05em;
   text-align: center;
+  border: none;
+  outline: none;
 }
 
 .button.-small {
