--- a/src/style/components/_cta-page.sass
+++ b/src/style/components/_cta-page.sass
@@ -1,26 +1,43 @@
 .cta-page
   position: fixed
-  top: 10vw
-  bottom: 10vw
-  right: 10vw
-  left: 10vw
-  padding: 10vw
-  background-color: #fff
+  top: 0
+  bottom: 0
+  right: 0
+  left: 0
   z-index: 4
-  box-shadow: 0 8px 32px rgba(#000, 0.2)
+  background-color: rgba(#000, 0.4)
 
   opacity: 0
   pointer-events: none
-  transform: scale(0.4)
   transition: all 0.3s ease
 
-  > form
-   > *
-    display: block
+  > .container
+    transform: scale(0.4)
+    position: absolute
+    top: 10vw
+    bottom: 10vw
+    right: 10vw
+    left: 10vw
+    padding: 10vw
+    background-color: #fff
+    box-shadow: 0 8px 32px rgba(#000, 0.2)
+    transition: all 0.3s ease
+
+    > #close-cta
+      position: absolute
+      top: 0
+      right: 0
+
+    > form
+     > *
+      display: block
+      margin-right: auto
+      margin-left: auto
 
 .-open-cta
   overflow: hidden
   .cta-page
     opacity: 1
     pointer-events: auto
-    transform: scale(1)
+    > .container
+      transform: scale(1)
