--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -92,13 +92,14 @@ html
       .button Start Free
 
     .cta-page
-      h1 We are happy to know you are interested
-      p Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
-      form
-        label for="email" Your email
-        input#email type="text" placeholder="yourname@company.com"
-        input.button type="submit" value="Send"
-      #close-cta Close
+      .container
+        h1 We are happy to know you are interested
+        p Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
+        form
+          label for="email" Your email
+          input#email type="text" placeholder="yourname@company.com"
+          input.button type="submit" value="Send"
+        #close-cta Close
 
     / script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
     script src="js/scripts.js"
