--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -21,37 +21,37 @@ html
 
     section.section-hero
       h1 Keep your team close  and your clients closer
-      h4 Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
+      h4 Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       a.button Start Free
 
     section#product.section-features
       .feature
         h2 Your team on the same page
-        p Great customer communication relies on internal coordination. With Remoto, your team share a common view of all customer interactions and stay always in sync.
+        p Great customer communication relies on internal coordination. With Remoto, your team shares a common view of all customer interactions and stays always in sync.
       .feature
-        h2 Freedom from the desk phone  
-        p Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize. 
+        h2 Freedom from the desk phone
+        p Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize, no cheat sheet clutering your desk.
       .feature
         h2 Transform your business in 7 min.
         p Choose toll-free or local numbers from over 40 countries, invite your team members and get going in under 7 minutes. No need for the IT guy or hardware investments
-    
+
     section#pricing.section-pricing
       h1 Plans that suit your needs
       .plans
         .plan
           h2.name Free
           h3.price $0
-          p.note Ta-dah! 🎉
+          p.note Yeah! 🎉
           a.button.-small Start Free
           ul.features
             li Free Intra-company calls worldwide
-            li 10k message storage
+            li 1 month message storage
             li Unlimited groups
         .plan
-          h2.name Standard
+          h2.name Professional
           h3.price $20
           p.note per active user, per month
-          a.button.-small Buy Standard
+          a.button.-small Buy Professional
           ul.features
             li All features from the Free plan
             li 1 year message storage
@@ -64,9 +64,10 @@ html
           p.note per active user, per month
           a.button.-small Buy Enterprise
           ul.features
-            li All features from the Standard plan
+            li All features from the Professional plan
             li Unlimited message storage
             li Call Queues
+            li Bring Your Own Carrier
             li Compliance Exports for all messages
             li Advanced IVR
       .footnote
@@ -74,30 +75,29 @@ html
           | * toll free excluded
         p
           | ** price per minute
-    
+
     section.section-letter
       .envelope
       .letter
         h1 A Letter from Fred
         p Save yourself.  Save the world.
-        p Life is short and the world is warming. What can you do about it? I bet you already are:  Remoto Remote working.
-        p The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere and everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love. It allow us to see the world, without ever having to commute. 
-        p Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen.
-        p How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization? 
-        p This is a problem I had myself in my previous companies and so did several professionals we interviewed. Remoto goal is to allow you to communicate better with you customers and your team, and convince your company that people don't need to be in the same room to be on the same page.
-        p Remoto is more than work tool, it is a new way to think about work. Think outside the cubicle, be Remoto.
+        p Life is short and the world is warming. What can you do about it? I bet you already are:  --Remoto-- Remote working.
+        p The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere. Everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love and see the world, without ever having to commute.
+        p Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen. How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization?
+        p This is a problem I had myself and so did several professionals we interviewed. Remoto's goal is to allow you to communicate better with your customers and your team, and prove that people don't need to be in the same room to be on the same page.
+        p Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
         p Yours,
         p.signature Fred Guth, Founder & CEO
-        p P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">alpha.remoto.me/fred@remoto.</a>
+        p P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
       .button Start Free
 
     .cta-page
-      h1 We are happy to know you are interested
-      p Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
+      h1 We are almost there...
+      p Remoto is still in beta, so you may find some blocks in the way.  But we won't charge for that ;)
       form
         label for="email" Your email
         input#email type="text" placeholder="yourname@company.com"
-        input.button type="submit" value="Send"
+        input.button type="submit" value="Feeling Brave"
       #close-cta Close
 
     / script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
