small changes in copy

--- a/src/style/components/_section-letter.sass
+++ b/src/style/components/_section-letter.sass
@@ -42,8 +42,8 @@
       font-weight: 400
       color: $color-saphire
       +medium-down
-        font-size: $font-size-hecto
-        line-height: $line-height-hecto
+        font-size: $font-size-deca
+        line-height: $line-height-deca
         margin-bottom: $space-m
 
     > .signature,
@@ -92,7 +92,7 @@
       background-position: center bottom
       background-repeat: no-repeat
       pointer-events: none
-    
+
       +medium-up
         max-width: 1024px
 
