--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -79,8 +79,9 @@ html
     section.section-letter
       .envelope
       .letter
-        h1 A Letter from Fred
-        p Save yourself.  Save the world.
+        h1 A Letter from our CEO
+        p
+          b Save yourself.  Save the world.
         p Life is short and the world is warming. What can you do about it? I bet you already are:  --Remoto-- Remote working.
         p The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere. Everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love and see the world, without ever having to commute.
         p Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen. How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization?
