Typography & buttons refactored

--- a/src/style/base/_reusables.sass
+++ b/src/style/base/_reusables.sass
@@ -7,6 +7,44 @@
   top: 50%
   transform: translateY(-50%)
 
+=click-states($bgcolor)
+  &:hover
+    background-color: mix(#000, $bgcolor, 5%)
+  &:focus
+    background-color: mix(#000, $bgcolor, 10%)
+  &:active
+    background-color: mix(#000, $bgcolor, 15%)
+
+=btn-size
+  padding-top: $space-xs
+  padding-bottom: $space-xs
+  padding-right: $space-m
+  padding-left: $space-m
+  font-size: $font-size-base
+  line-height: $line-height-deci
+
+=btn-size-small
+  padding-top: $space-xxs
+  padding-bottom: $space-xxs
+  padding-right: $space-s
+  padding-left: $space-s
+  font-size: $font-size-centi
+  line-height: $line-height-centi
+
+=btn-size-tiny
+  padding-top: $space-xxs
+  padding-bottom: $space-xxs
+  padding-right: $space-xs
+  padding-left: $space-xs
+  font-size: $font-size-mili
+  line-height: $line-height-mili
+
+=btn-color($bgcolor: $color-topaz, $txcolor: #fff)
+  color: $txcolor
+  background-color: $bgcolor
+  +click-states($bgcolor)
+
+
 =smart-underline($background: #fff, $selection: $color-selection, $position: 90%)
   color: inherit
   text-decoration: none
