--- a/src/style/components/_cta-page.sass
+++ b/src/style/components/_cta-page.sass
@@ -14,25 +14,58 @@
   > .container
     transform: scale(0.4)
     position: absolute
-    top: 10vw
-    bottom: 10vw
-    right: 10vw
-    left: 10vw
-    padding: 10vw
+    top: 8vw
+    bottom: 8vw
+    right: 8vw
+    left: 8vw
+    padding: 8vh 8vw
     background-color: #fff
     box-shadow: 0 8px 32px rgba(#000, 0.2)
     transition: all 0.3s ease
+    overflow: scroll
+    text-align: center
+
+    > h1,
+    > p
+      text-align: left
+
+    > h1
+      color: $color-saphire
+      font-weight: 600
+
+    > .button
+      display: inline-block
+      margin: $space-xs
+      margin-bottom: 0
+      +small-only
+        +btn-size-small
 
     > #close-cta
-      position: absolute
-      top: 0
-      right: 0
-
-    > form
-     > *
+      width: $space-m
+      height: $space-m
       display: block
-      margin-right: auto
-      margin-left: auto
+      position: absolute
+      top: $space-s
+      right: $space-s
+      text-indent: -9999px
+      cursor: pointer
+      border-radius: 50%
+      transform: rotate(45deg)
+      +click-states(#eee)
+      &:before,
+      &:after
+        content: ''
+        width: 3px
+        height: $space-s
+        display: block
+        position: absolute
+        top: 50%
+        left: 50%
+        background-color: #999
+        transform: translate(-50%, -50%)
+      &:after
+        height: 3px
+        width: $space-s
 
 .-open-cta
   overflow: hidden
