--- a/src/style/components/_section-letter.sass
+++ b/src/style/components/_section-letter.sass
@@ -4,6 +4,7 @@
   overflow: hidden
   z-index: 1
   padding-top: $space-xxl + $space-xxl
+  font-style: italic
 
   &:after
     content: ''
@@ -38,13 +39,8 @@
       padding-bottom: $space-xl
 
     > h1
-      margin-bottom: $space-l
       font-weight: 400
       color: $color-saphire
-      +medium-down
-        font-size: $font-size-hecto
-        line-height: $line-height-hecto
-        margin-bottom: $space-m
 
     > .signature,
     > p:last-child
