--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -1,6 +1,6 @@
 p
   font-size: $font-size-centi
-  line-height: $line-height-centi
+  line-height: $line-height-deci
   margin-bottom: $space-s
 
   +medium-up
@@ -11,18 +11,32 @@ p
 h1, h2, h3, h4
   font-family: $font-family-headings
   font-weight: 400
-  margin-bottom: $space-m
+  margin-bottom: $space-s
+  +medium-up
+    margin-bottom: $space-m
 
 h1
-  font-size: $font-size-kilo
-  line-height: $line-height-kilo
-h2
   font-size: $font-size-hecto
-  line-height: $line-height-hecto
-h3
-  font-size: $font-size-deca
   line-height: $line-height-deca
-h4
+  +medium-up
+    font-size: $font-size-kilo
+    line-height: $line-height-kilo
+h2
+  font-size: $font-size-deca
+  line-height: $line-height-base
+  +medium-up
+    font-size: $font-size-hecto
+    line-height: $line-height-hecto
+h3
   font-size: $font-size-base
   line-height: $line-height-base
+  +medium-up
+    font-size: $font-size-deca
+    line-height: $line-height-deca
+h4
+  font-size: $font-size-deci
+  line-height: $line-height-deci
   font-weight: 200
+  +medium-up
+    font-size: $font-size-base
+    line-height: $line-height-base
