--- a/src/style/elements/_button.sass
+++ b/src/style/elements/_button.sass
@@ -1,45 +1,27 @@
 .button
   display: inline-block
-  color: #fff
-  background-color: $color-topaz
   box-shadow: 0 4px 16px rgba(#000, 0.2)
   cursor: pointer
   transition: all 0.2s ease
-  padding-top: $space-xs
-  padding-bottom: $space-xs
-  padding-right: $space-m
-  padding-left: $space-m
-  font-size: $font-size-base
-  line-height: $line-height-deci
   font-weight: 500
   letter-spacing: 0.05em
   text-align: center
   border: none
   outline: none
+  +btn-color
+  +btn-size
+
+  &.-cancel
+    +btn-color(#ccc)
 
   &.-small
-    padding-top: $space-xxs
-    padding-bottom: $space-xxs
-    padding-right: $space-s
-    padding-left: $space-s
-    font-size: $font-size-centi
-    line-height: $line-height-centi
+    +btn-size-small
 
   &.-tiny
-    padding-top: $space-xxs
-    padding-bottom: $space-xxs
-    padding-right: $space-xs
-    padding-left: $space-xs
-    font-size: $font-size-mili
-    line-height: $line-height-mili
+    +btn-size-tiny
 
-  &:hover
-    background-color: mix(#000, $color-topaz, 5%)
 
   &:focus
-    background-color: mix(#000, $color-topaz, 10%)
     box-shadow: 0 3px 11px rgba(#000, 0.3)
-  
   &:active
-    background-color: mix(#000, $color-topaz, 15%)
     box-shadow: 0 2px 6px rgba(#000, 0.4)
