--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -94,11 +94,10 @@ html
     .cta-page
       .container
         h1 We are happy to know you are interested
-        p Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
-        form
-          label for="email" Your email
-          input#email type="text" placeholder="yourname@company.com"
-          input.button type="submit" value="Send"
+        p Remoto is still being developed, but if you want to be one of the beta testers you can click the link below to sign up and create your team.
+        p Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
+        a.button href="http://alpha.remoto.me" Be Brave
+        a.button.-cancel No, Thanks
         #close-cta Close
 
     / script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
