--- a/style/style.css
+++ b/style/style.css
@@ -76,7 +76,7 @@ a {
 
 p {
   font-size: 16px;
-  line-height: 20px;
+  line-height: 24px;
   margin-bottom: 1.5rem;
 }
 
@@ -91,28 +91,62 @@ p {
 h1, h2, h3, h4 {
   font-family: "Montserrat", "Gotham", Helvetica, sans-serif;
   font-weight: 400;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 961px) {
+  h1, h2, h3, h4 {
+    margin-bottom: 2rem;
+  }
 }
 
 h1 {
-  font-size: 48px;
-  line-height: 64px;
-}
-
-h2 {
   font-size: 36px;
-  line-height: 56px;
-}
-
-h3 {
-  font-size: 24px;
   line-height: 48px;
 }
 
-h4 {
+@media (min-width: 961px) {
+  h1 {
+    font-size: 48px;
+    line-height: 64px;
+  }
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 32px;
+}
+
+@media (min-width: 961px) {
+  h2 {
+    font-size: 36px;
+    line-height: 56px;
+  }
+}
+
+h3 {
   font-size: 20px;
   line-height: 32px;
+}
+
+@media (min-width: 961px) {
+  h3 {
+    font-size: 24px;
+    line-height: 48px;
+  }
+}
+
+h4 {
+  font-size: 18px;
+  line-height: 24px;
   font-weight: 200;
+}
+
+@media (min-width: 961px) {
+  h4 {
+    font-size: 20px;
+    line-height: 32px;
+  }
 }
 
 body > section {
@@ -308,6 +342,7 @@ body > section {
   overflow: hidden;
   z-index: 1;
   padding-top: 32rem;
+  font-style: italic;
 }
 
 .section-letter:after {
@@ -349,17 +384,8 @@ body > section {
 }
 
 .section-letter > .letter > h1 {
-  margin-bottom: 4rem;
   font-weight: 400;
   color: #07c;
-}
-
-@media (max-width: 960px) {
-  .section-letter > .letter > h1 {
-    font-size: 36px;
-    line-height: 56px;
-    margin-bottom: 2rem;
-  }
 }
 
 .section-letter > .letter > .signature,
@@ -475,26 +501,85 @@ body > section {
 .cta-page > .container {
   transform: scale(0.4);
   position: absolute;
-  top: 10vw;
-  bottom: 10vw;
-  right: 10vw;
-  left: 10vw;
-  padding: 10vw;
+  top: 8vw;
+  bottom: 8vw;
+  right: 8vw;
+  left: 8vw;
+  padding: 8vh 8vw;
   background-color: #fff;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
+  overflow: scroll;
+  text-align: center;
+}
+
+.cta-page > .container > h1,
+.cta-page > .container > p {
+  text-align: left;
+}
+
+.cta-page > .container > h1 {
+  color: #07c;
+  font-weight: 600;
+}
+
+.cta-page > .container > .button {
+  display: inline-block;
+  margin: 1rem;
+  margin-bottom: 0;
+}
+
+@media (max-width: 640px) {
+  .cta-page > .container > .button {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .cta-page > .container > #close-cta {
+  width: 2rem;
+  height: 2rem;
+  display: block;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 1.5rem;
+  right: 1.5rem;
+  text-indent: -9999px;
+  cursor: pointer;
+  border-radius: 50%;
+  transform: rotate(45deg);
 }
 
-.cta-page > .container > form > * {
+.cta-page > .container > #close-cta:hover {
+  background-color: #e2e2e2;
+}
+
+.cta-page > .container > #close-cta:focus {
+  background-color: #d6d6d6;
+}
+
+.cta-page > .container > #close-cta:active {
+  background-color: #cacaca;
+}
+
+.cta-page > .container > #close-cta:before, .cta-page > .container > #close-cta:after {
+  content: '';
+  width: 3px;
+  height: 1.5rem;
   display: block;
-  margin-right: auto;
-  margin-left: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: #999;
+  transform: translate(-50%, -50%);
+}
+
+.cta-page > .container > #close-cta:after {
+  height: 3px;
+  width: 1.5rem;
 }
 
 .-open-cta {
@@ -512,22 +597,51 @@ body > section {
 
 .button {
   display: inline-block;
-  color: #fff;
-  background-color: #f75;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: all 0.2s ease;
+  font-weight: 500;
+  letter-spacing: 0.05em;
+  text-align: center;
+  border: none;
+  outline: none;
+  color: #fff;
+  background-color: #f75;
   padding-top: 1rem;
   padding-bottom: 1rem;
   padding-right: 2rem;
   padding-left: 2rem;
   font-size: 20px;
   line-height: 24px;
-  font-weight: 500;
-  letter-spacing: 0.05em;
-  text-align: center;
-  border: none;
-  outline: none;
+}
+
+.button:hover {
+  background-color: #f27151;
+}
+
+.button:focus {
+  background-color: #e66b4d;
+}
+
+.button:active {
+  background-color: #d96548;
+}
+
+.button.-cancel {
+  color: #fff;
+  background-color: #ccc;
+}
+
+.button.-cancel:hover {
+  background-color: #c2c2c2;
+}
+
+.button.-cancel:focus {
+  background-color: #b8b8b8;
+}
+
+.button.-cancel:active {
+  background-color: #adadad;
 }
 
 .button.-small {
@@ -548,16 +662,10 @@ body > section {
   line-height: 16px;
 }
 
-.button:hover {
-  background-color: #f27151;
-}
-
 .button:focus {
-  background-color: #e66b4d;
   box-shadow: 0 3px 11px rgba(0, 0, 0, 0.3);
 }
 
 .button:active {
-  background-color: #d96548;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
 }
