--- a/src/style/ambience/_typography.sass
+++ b/src/style/ambience/_typography.sass
@@ -1,6 +1,7 @@
 $font-family-body: 'Roboto', Helvetica, sans-serif
 $font-family-headings: 'Montserrat', 'Gotham', Helvetica, sans-serif
 $font-family-tag: 'Roboto', Helvetica, sans-serif
+$font-family-serif: 'Crimson Text', Times, serif
 
 $font-size-mega: 72px;
 $font-size-kilo: 48px;
