--- a/src/style/components/_section-letter.sass
+++ b/src/style/components/_section-letter.sass
@@ -4,7 +4,13 @@
   overflow: hidden
   z-index: 1
   padding-top: $space-xxl + $space-xxl
-  font-style: italic
+  font-family: $font-family-serif
+
+  .-bold
+    font-weight: 700
+
+  .-strike
+    text-decoration: line-through
 
   &:after
     content: ''
