--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -20,6 +20,7 @@
 @import 'components/section-features'
 @import 'components/section-pricing'
 @import 'components/section-letter'
+@import 'components/section-footer'
 @import 'components/cta-page'
 
 // Elements
