--- a/src/style/base/_reusables.sass
+++ b/src/style/base/_reusables.sass
@@ -1,6 +1,6 @@
-=container
-  padding-left: calc(#{$space-xs} + 10vw)
-  padding-right: calc(#{$space-xs} + 10vw)
+=container($sidespace: calc(#{$space-xs} + 10vw))
+  padding-left: $sidespace
+  padding-right: $sidespace
 
 =v-align
   position: relative
