--- a/style/style.css
+++ b/style/style.css
@@ -506,8 +506,17 @@ body > footer {
 .section-footer {
   background-color: #fff;
   display: flex;
-  flex-wrap: wrap;
   box-shadow: 0 0 64px rgba(0, 0, 0, 0.2);
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.section-footer > .column {
+  width: 25%;
+  min-width: 8rem;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  flex-grow: 1;
 }
 
 .section-footer > .column > * {
