Remove CTA modal and fix buttons links

--- a/src/style/components/_section-pricing.sass
+++ b/src/style/components/_section-pricing.sass
@@ -58,3 +58,9 @@
         &:first-child
           font-weight: 700
           color: #fff
+
+      &.-soon
+        opacity: 0.6
+        > .button
+          cursor: default
+          background-color: mix(#fff, $color-darksaphire, 20%)
