--- a/style/style.css
+++ b/style/style.css
@@ -339,6 +339,15 @@ body > footer {
   color: #fff;
 }
 
+.section-pricing > .plans > .plan.-soon {
+  opacity: 0.6;
+}
+
+.section-pricing > .plans > .plan.-soon > .button {
+  cursor: default;
+  background-color: #5c6992;
+}
+
 .section-letter {
   background-color: #347;
   position: relative;
