--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -96,7 +96,7 @@ html
         p Yours,
         p.signature Fred Guth, Founder & CEO
         p P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
-      .button href="http://beta.remoto.me" target="_blank" Start Free
+      a.button href="http://beta.remoto.me" target="_blank" Start Free
 
     / footer.section-footer
     /   .column
