Add mockup images on feature setcion

--- a/src/style/components/_section-features.sass
+++ b/src/style/components/_section-features.sass
@@ -1,5 +1,42 @@
 .section-features
+  +container(calc(#{$space-xxs} + 4vw))
   background-color: #fff
+  overflow: hidden
   .feature
-    padding-top: $space-l
-    padding-bottom: $space-l
+    position: relative
+    padding-top: $space-m
+    padding-bottom: $space-m
+    > h2
+      font-size: $font-size-deca
+      line-height: $line-height-base
+    > p
+      font-size: $font-size-deci
+      line-height: $line-height-base
+      color: hsl(0, 0%, 60%)
+    +medium-up
+      padding-top: $space-xl
+      padding-bottom: $space-xl
+      &:after
+        content: ''
+        height: 40rem
+        width: 70%
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+        background-position: center
+        background-size: contain
+        background-repeat: no-repeat
+      &:nth-child(odd)
+        padding-right: 55%
+        &:after
+          right: -10%
+      &:nth-child(even)
+        padding-left: 55%
+        &:after
+          left: -10%
+      &:nth-child(1):after
+        background-image: url("../images/mockup-feature1.png")
+      &:nth-child(2):after
+        background-image: url("../images/mockup-feature2.png")
+      &:nth-child(3):after
+        background-image: url("../images/mockup-illustration.png")
