Add mockup to hero section

--- a/src/style/components/_section-hero.sass
+++ b/src/style/components/_section-hero.sass
@@ -1,4 +1,27 @@
 .section-hero
   padding-top: $space-xxl
+  padding-bottom: $space-xxl
   color: #fff
   background-color: $color-saphire
+  background-image: url("../images/pattern-blue.svg")
+  background-size: cover
+  background-position: center
+  background-repeat: no-repeat
+  background-attachment: fixed
+  +medium-up
+
+    &:after
+      content: ''
+      height: 100%
+      width: 45%
+      position: absolute
+      top: 0
+      // transform: translateY(-50%)
+      // background-color: #f00
+      background-image: url("../images/mockup-hero.png")
+      background-position: center $space-xxl
+      background-size: contain
+      background-repeat: no-repeat
+      left: 0
+    > *
+      margin-left: 45%
