--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -95,7 +95,7 @@ html
         p Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
         p Yours,
         p.signature Fred Guth, Founder & CEO
-        p P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
+        / p P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
       a.button href="http://beta.remoto.me" target="_blank" Start Free
 
     / footer.section-footer
